Enhance documentation and workflows for Tag Docker Images Action
- Updated README.md with comprehensive features, usage examples, and input/output details.
- Improved error handling and validation in Tag-DockerImages.ps1.
- Added action.yml with enhanced descriptions and branding.
- Created release.yml and test.yml workflows for automated testing and version tagging.
- Established CHANGELOG.md and CONTRIBUTING.md for better project management.
- Introduced publishing guide and examples for hotfix and multi-environment promotions.

--- a/action.yml
+++ b/action.yml
@@ -1,17 +1,21 @@
 name: 'Tag Docker Images'
-description: 'Tags Docker images with new tags'
+description: 'Tags Docker images with new tags for production releases and versioning workflows'
+author: 'Optivem'
+branding:
+  icon: 'tag'
+  color: 'blue'
 
 inputs:
   image-urls:
     description: 'JSON array of source Docker image URLs with existing tags'
     required: true
   tag:
-    description: 'Target tag to apply to images (e.g., v1.0.5)'
+    description: 'Target tag to apply to images (e.g., v1.0.5, latest, production)'
     required: true
 
 outputs:
   image-urls:
-    description: 'JSON array of Docker image URLs with new tags'
+    description: 'JSON array of Docker image URLs with new tags applied'
     value: ${{ steps.tag-images.outputs.image-urls }}
 
 runs:
